--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,47 +1,3 @@
-/* 1. Use a more-intuitive box-sizing model */
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-
-  /* 2. Remove default margin */
-* {
-    margin: 0;
-}
-
-body {
-    /* 3. Add accessible line-height */
-    line-height: 1.5;
-    /* 4. Improve text rendering */
-    -webkit-font-smoothing: antialiased;
-}
-
-  /* 5. Improve media defaults */
-img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-}
-
-  /* 6. Inherit fonts for form controls */
-input, button, textarea, select {
-    font: inherit;
-}
-
-  /* 7. Avoid text overflows */
-p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    text-wrap: balance;
-}
-
-  /*
-    9. Create a root stacking context
-  */
-#root, #__next {
-    isolation: isolate;
-}
-
 /* Custom CSS */
 
 * {
@@ -52,7 +8,7 @@ body {
     background-color: antiquewhite;
 }
 
-section {
+.card-section {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -76,6 +32,11 @@ section {
     align-items: flex-start;
     justify-content: space-around;
     gap: 1em;
+}
+
+.card * {
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: whitesmoke;
 }
 
 .card-design {
@@ -107,10 +68,6 @@ section {
     right: 1em;
     bottom: 1em;
     /* justify-self: flex-start; */
-}
-
-.card * {
-    font-family: Helvetica, Arial, sans-serif;
 }
 
 .links {
