--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -87,7 +87,7 @@ nav a {
   box-sizing: border-box; /* Ensure padding doesn’t overflow */
 }
 
-nav a:hover, nav a:active {
+nav a:hover, nav a:active, nav a.active {
   background-color: black;
   color: antiquewhite;
   transition: transform 100ms ease-in-out;
